Ensure the settings page are usable on mobile

--- a/web/src/app/pages/settings-page/settings-page.component.scss
+++ b/web/src/app/pages/settings-page/settings-page.component.scss
@@ -6,10 +6,9 @@
 }
 
 .container {
-    width: 100%;
-    max-width: 1024px;
-    box-shadow:
-    0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    width: 1024px;
+    max-width: calc(100vw - (32px + 16px));
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
     background-color: white;
     padding: 16px;
     margin: 16px;
